# data_analysis_gui

./: .importlinter  .pre-commit-config.yaml  README.md  THREAD_SAFETY.md  check_test_files.py  filetree.py  filetree.txt  filetree_full.py  fix_everything.py  main.py  main_window.py  plot_manager.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_analysis_workflow.py  test_concentration_response.py  test_tevc_workflow.py
config/: settings.py  themes.py
cr_test_data/: 250202_007 dual range.csv  CR_pytest.bat  RANGE NUMBERS THIS IS HELPFULmake DR pytest prompt.txt  test_concentration_response.py
dialogs/: __init__.py  analysis_plot_dialog.py  batch_results_dialog.py  concentration_response_dialog.py  current_density_iv_dialog.py
iv_test_data/: 250514_001[1-11].mat  250514_002[1-11].mat  250514_003[1-11].mat  250514_004[1-11].mat  250514_005[1-11].mat  250514_006[1-11].mat  250514_007[1-11].mat  250514_008[1-11].mat  250514_009[1-11].mat  250514_010[1-11].mat  250514_011[1-11].mat  250514_012[1-11].mat
tests/: CR_pytest.py  conftest.py  pytest.ini  test_abf_analysis.py  test_abf_batch_analysis.py  test_abf_current_density.py  test_abf_single_analysis.py  test_analysis_plot.py  test_analysis_workflow.py  test_app_controller_export.py  test_batch_analysis.py  test_cd_dual_ranges.py  test_channel_definitions.py  test_channel_definitions_demo.py  test_concentration_response.py  test_current_density.py  test_export_service.py  test_gui_smoke.py  test_integration.py  test_peak.py  test_peak_modes.py  test_single_analysis.py  test_single_export.py  (+3 more)
(+250 files in other folders)
