[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-gui"
version = "0.1.0"
description = "Patch-clamp electrophysiology data analysis GUI with MAT/CSV support"
authors = [
  { name="Charlie K.", email="your_email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "PyQt5>=5.15",
  "matplotlib>=3.6",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-qt",
]

[project.scripts]
data-analysis-gui = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config", "dialogs", "utils", "widgets"]
